style: Refactor staff management pages to a unified design

--- a/EVDealerSales.Presentation/Pages/Shared/_Layout.cshtml
+++ b/EVDealerSales.Presentation/Pages/Shared/_Layout.cshtml
@@ -107,25 +107,25 @@
                                         <li>
                                             <a class="dropdown-item" asp-page="/TestDrive/Index">
                                                 <i class="fa-regular fa-calendar-check"></i>
-                                                Appointment
+                                                Test Drive Appointments
                                             </a>
                                         </li>
                                         <li>
                                             <a class="dropdown-item" asp-page="/Staff/ManageOrders">
                                                 <i class="bi bi-bag-check me-2"></i>
-                                                Orders
+                                                Customer Orders
                                             </a>
                                         </li>
                                         <li>
                                             <a class="dropdown-item" asp-page="/Staff/ManageDeliveries">
                                                 <i class="bi bi-bag-check me-2"></i>
-                                                Deliveries
+                                                Customer Deliveries
                                             </a>
                                         </li>
                                         <li>
                                             <a class="dropdown-item" asp-page="/Staff/Customers">
                                                 <i class="bi bi-people me-2"></i>
-                                                Customer
+                                                Manage Customer
                                             </a>
                                         </li>                                 
                                     }
