refactor: Refactor UI to use a cleaner, modern design

--- a/EVDealerSales.Presentation/Pages/Shared/_Layout.cshtml
+++ b/EVDealerSales.Presentation/Pages/Shared/_Layout.cshtml
@@ -132,7 +132,7 @@
                                     else if (userRole == "DealerManager")
                                     {
                                         <li>
-                                            <a class="dropdown-item" asp-page="/Manager/ManagerStaff">
+                                            <a class="dropdown-item" asp-page="/Manager/ManageStaff">
                                                 <i class="bi bi-person-badge me-2"></i>
                                                 Staffs
                                             </a>
