--- a/EVDealerSales.Presentation/Pages/Shared/_Layout.cshtml
+++ b/EVDealerSales.Presentation/Pages/Shared/_Layout.cshtml
@@ -150,7 +150,7 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a class="dropdown-item" asp-page="/Report/Dashboard">
+                                            <a class="dropdown-item" asp-page="/Manager/ManageReport">
                                                 <i class="bi bi-bar-chart-line me-2"></i>
                                                 Reports
                                             </a>
